<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/theme_activity_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.storymatrix.drama.view.TitleBarComponent android:id="@id/title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" app:title="@string/str_setting_appearance" />
    <LinearLayout android:orientation="vertical" android:id="@id/themeArea" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/title_bar">
        <com.storymatrix.drama.uiwidget.LanguageItem android:id="@id/device_theme" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_56" app:action_title="@string/str_appearance_followsystem" />
        <com.storymatrix.drama.uiwidget.LanguageItem android:id="@id/dark_theme" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_56" app:action_title="@string/str_appearance_dark" />
        <com.storymatrix.drama.uiwidget.LanguageItem android:id="@id/light_theme" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_56" app:action_title="@string/str_appearance_light" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>