<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/dialog_common_radius" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dz_text_18" android:textStyle="bold" android:textColor="@color/color_FF111111_FFFFFF" android:gravity="center" android:id="@id/tv_title" android:layout_width="@dimen/dz_dp_0" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_24" android:text="@string/str_clear_all_searches" android:includeFontPadding="false" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dz_text_14" android:textColor="@color/color_FF888888_FFF2F2F7" android:gravity="center" android:id="@id/tv_content" android:layout_width="@dimen/dz_dp_0" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_8" android:text="@string/str_clear_all_searches_content" android:includeFontPadding="false" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
    <TextView android:textSize="@dimen/dz_text_16" android:textColor="@color/color_100_FF375F" android:gravity="center" android:id="@id/tv_cancel" android:background="@drawable/shape_delete_search_history_cancel_bg" android:layout_width="@dimen/dz_dp_0" android:layout_height="@dimen/dz_dp_44" android:layout_marginTop="@dimen/dz_dp_20" android:layout_marginBottom="@dimen/dz_dp_20" android:text="@string/str_cancel" android:includeFontPadding="false" android:layout_marginStart="@dimen/dz_dp_20" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/tv_clear_all" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_content" />
    <TextView android:textSize="@dimen/dz_text_16" android:textColor="@color/color_100_ffffff" android:gravity="center" android:id="@id/tv_clear_all" android:background="@drawable/shape_delete_search_history_clear_all_bg" android:layout_width="@dimen/dz_dp_0" android:layout_height="@dimen/dz_dp_44" android:text="@string/str_clear_all" android:includeFontPadding="false" android:layout_marginStart="@dimen/dz_dp_16" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_cancel" app:layout_constraintTop_toTopOf="@id/tv_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>