<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_r8_ff252527" android:layout_width="@dimen/dz_dp_291" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dz_dp_17" android:textStyle="bold" android:textColor="@color/color_FF111111_FFFFFF" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_24" android:text="@string/str_cancel_popup_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dz_dp_14" android:textColor="@color/color_FF111111_FFF2F2F7" android:gravity="center" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_8" android:text="@string/str_cancel_popup_text" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView android:textSize="@dimen/dz_text_16" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center" android:id="@id/tv_cancel" android:background="@drawable/shape_dialog_delete_bg" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_44" android:layout_marginTop="@dimen/dz_dp_20" android:text="@string/str_cancel_popup_cancel" android:maxLines="1" android:includeFontPadding="false" android:lineSpacingExtra="@dimen/dz_dp_1" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/content" />
    <TextView android:textSize="@dimen/dz_text_14" android:textColor="@color/color_FF111111_FFFFFF" android:ellipsize="end" android:gravity="center" android:id="@id/tv_go" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_12" android:layout_marginBottom="@dimen/dz_dp_24" android:minWidth="118.0dip" android:text="@string/str_cancel_popup_confirm" android:maxLines="2" android:includeFontPadding="false" android:lineSpacingExtra="@dimen/dz_dp_1" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constrainedWidth="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>