<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.storymatrix.drama.uiwidget.round.RoundedLinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/shape_dialog_r8_bg" android:layout_width="291.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:rl_radius="@dimen/dz_dp_8">
        <TextView android:textSize="@dimen/dz_text_18" android:textStyle="bold" android:textColor="@color/color_FF111111_FFFFFF" android:gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_24" android:text="@string/str_floating_notif_request_title" android:includeFontPadding="false" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" />
        <TextView android:textSize="@dimen/dz_text_14" android:textColor="@color/color_FF888888_FFF2F2F7" android:gravity="center" android:id="@id/tv_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_8" android:text="@string/str_floating_notif_request_desc" android:includeFontPadding="false" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_44" android:layout_marginTop="@dimen/dz_dp_20" android:layout_marginBottom="@dimen/dz_dp_20" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20">
            <TextView android:textSize="@dimen/dz_text_16" android:textColor="@color/color_100_FF375F" android:gravity="center" android:id="@id/tv_later" android:background="@drawable/shape_dialog_cancel_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/str_floating_notif_request_later" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingExtra="@dimen/dz_dp_1" />
            <TextView android:textSize="@dimen/dz_text_16" android:textColor="@color/color_100_FFFFFF" android:gravity="center" android:id="@id/tv_open" android:background="@drawable/shape_dialog_delete_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/str_floating_notif_request_open" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingExtra="@dimen/dz_dp_1" android:layout_marginStart="@dimen/dz_dp_16" />
        </LinearLayout>
    </com.storymatrix.drama.uiwidget.round.RoundedLinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>