<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/root_view" android:tag="layout/activity_wallet_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.storymatrix.drama.view.TitleBarComponent android:id="@id/title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/wallet_bg" android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/top_info" android:paddingTop="@dimen/dz_dp_32" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_bar">
        <TextView android:textSize="@dimen/dz_dp_12" android:textColor="@color/color_888888_99FFFFFF" android:id="@id/tv_coins" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_coins" android:layout_marginStart="@dimen/dz_dp_32" app:layout_constraintEnd_toStartOf="@id/guide_line" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/dz_dp_28" android:textStyle="bold" android:textColor="@color/color_FF111111_FFFFFF" android:id="@id/tv_coins_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_8" android:includeFontPadding="false" android:layout_marginStart="@dimen/dz_dp_32" app:layout_constraintEnd_toStartOf="@id/guide_line" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_coins" />
        <View android:id="@id/guide_line" android:visibility="invisible" android:layout_width="1.0dip" android:layout_height="1.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="@dimen/dz_dp_12" android:textColor="@color/color_888888_99FFFFFF" android:id="@id/tv_bonus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_reward_coins" android:layout_marginEnd="@dimen/dz_dp_32" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/guide_line" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/dz_dp_28" android:textStyle="bold" android:textColor="@color/color_FF111111_FFFFFF" android:id="@id/tv_bonus_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_8" android:includeFontPadding="false" android:layout_marginEnd="@dimen/dz_dp_32" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/guide_line" app:layout_constraintTop_toBottomOf="@id/tv_bonus" />
        <Button android:textSize="@dimen/dz_dp_16" android:textColor="@color/color_100_ffffff" android:id="@id/btn_top_up" android:background="@drawable/shape_gradient_btn_bg_radius22" android:layout_width="@dimen/dz_dp_280" android:layout_height="@dimen/dz_dp_44" android:layout_marginTop="@dimen/dz_dp_24" android:text="@string/str_top_up" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_coins_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.storymatrix.drama.view.ActionItemComponent android:id="@id/item_transaction_history" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_51" android:layout_marginTop="@dimen/dz_dp_32" app:action_title="@string/str_transaction_history" app:layout_constraintTop_toBottomOf="@id/top_info" />
    <com.storymatrix.drama.view.ActionItemComponent android:id="@id/item_bonus_received" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_51" app:action_title="@string/str_reward_coins" app:layout_constraintTop_toBottomOf="@id/item_transaction_history" />
    <com.storymatrix.drama.view.ActionItemComponent android:id="@id/item_chapters_unlocked" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_51" app:action_title="@string/str_consumption_records" app:layout_constraintTop_toBottomOf="@id/item_bonus_received" />
    <com.storymatrix.drama.view.ActionItemComponent android:id="@id/item_auto_subscription" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_51" app:action_title="@string/str_auto_play_next_video" app:action_type="toggle" app:layout_constraintTop_toBottomOf="@id/item_chapters_unlocked" />
</androidx.constraintlayout.widget.ConstraintLayout>