<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sobot_common_gray6" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/sobot_layout_titlebar1" />
    <LinearLayout android:orientation="horizontal" android:background="@color/sobot_common_msg_bg_gray" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12.0sp" android:textColor="@color/sobot_common_gray1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sobot_str_goto_setting_info" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textColor="@color/sobot_color" android:id="@id/tv_go_to_settring" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/sobot_str_goto_setting_allow" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <androidx.recyclerview.widget.RecyclerView android:scrollbarSize="10.0dip" android:scrollbarThumbVertical="@drawable/sobot_custom_scroll_style" android:id="@id/sobot_rcy" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="3.0dip" android:horizontalSpacing="3.0dip" android:verticalSpacing="3.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="17.0sp" android:textColor="@color/sobot_common_white" android:gravity="center" android:id="@id/sobot_btn_submit" android:background="@drawable/sobot_normal_btn_bg" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_margin="20.0dip" android:text="@string/sobot_button_send" android:textAllCaps="false" android:stateListAnimator="@null" />
    </LinearLayout>
</LinearLayout>