<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:background="@drawable/clipboard_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dz_dp_42" android:layout_marginEnd="@dimen/dz_dp_42"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dz_text_14_sp" android:textColor="@color/color_FF888888_FFF2F2F7" android:gravity="center" android:id="@id/content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_24" android:text="@string/str_clipboard_content" android:layout_marginStart="20.0dip" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dz_text_13_sp" android:textColor="@color/color_888888_99FFFFFF" android:gravity="center" android:id="@id/cancel_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dz_dp_20" android:layout_marginBottom="@dimen/dz_dp_14" android:text="@string/str_clipboard_disagree" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/content" />
    <Button android:textSize="@dimen/dz_text_16_sp" android:textColor="@color/color_100_ffffff" android:id="@id/btn" android:background="@drawable/shape_explore_more" android:layout_width="fill_parent" android:layout_height="@dimen/dz_dp_44" android:layout_marginTop="@dimen/dz_dp_14" android:layout_marginBottom="@dimen/dz_dp_24" android:text="@string/str_clipboard_agree" android:textAllCaps="false" android:layout_marginStart="@dimen/dz_dp_20" android:layout_marginEnd="@dimen/dz_dp_20" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cancel_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>